force-app/main/default/objects/RH_WorkGroup__c/RH_WorkGroup__c.object-meta.xml
<CustomObject>
    <label>WorkGroup</label>
    <nameField>
        <label>WorkGroup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WorkGroups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>