force-app/main/default/objects/RH_WorkGroup__c/fields/RH_Description__c.field-meta.xml
<CustomField>
    <fullName>RH_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>