force-app/main/default/objects/RH_WorkGroup__c/fields/RH_Status__c.field-meta.xml
<CustomField>
    <fullName>RH_Status__c</fullName>
    <defaultValue>&apos;Draft&apos;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Desactived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>