force-app/main/default/objects/RH_WorkGroup__c/fields/RH_Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>RH_Team_Leader__c</fullName>
    <label>Team Leader</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RH_Role__c</field>
            <operation>equals</operation>
            <value>Team Leader, CEO</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leading WorkGroup</relationshipLabel>
    <relationshipName>WorkGroups_Leader</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>